# Pyrallel-Consumer

./: .env.sample  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  README.ko.md  README.md  SECURITY.md  baseline_consumer.py  docker-compose.yml  main.py  prd.ko.md  prd.md  prd_dev.ko.md  prd_dev.md  producer.py  pyproject.toml  pyrallel_consumer_test.py  test_nested_settings.py  test_pydantic.py  test_pydantic_basemodel.py
.github/: compatibility-matrix.json  dependabot.yml  e2e.compose.yml
.github/workflows/: benchmarks.yml  ci.yml  ci_monitoring.yml  compatibility-matrix.yml  e2e.yml  publish-pypi.yml  release-verify.yml
benchmarks/: README.md  baseline_consumer.py  kafka_admin.py  process_batch_advisor.py  producer.py  profile_benchmark_yappi.py  pyrallel_consumer_test.py  release_gate.py  run_parallel_benchmark.py  stats.py
benchmarks/tui/: __init__.py  app.py  controller.py  log_parser.py  option_help.py  path_picker.py  results_report.py  state.py
docs/: index.md  internal-doc-language-policy.md  operations.en.md  operations.md  ops_playbooks.md
docs/blueprint/: 00-index.ko.md  00-index.md  01-overview.ko.md  01-overview.md  02-requirements.ko.md  02-requirements.md  03-architecture.ko.md  03-architecture.md  04-open-decisions.ko.md  04-open-decisions.md  99-context-restoration.ko.md  99-context-restoration.md
docs/operations/: compatibility-matrix.md  development-verification-workflow.md  github-actions-act-local-review.md  guide.en.md  guide.ko.md  index.md  language-policy.md  oss-messaging-guardrails.md  playbooks.md  public-contract-v1.md  release-readiness.md  release-versioning-policy.md  role-b-d2-3-scoped-deliverable-proposal.md  secure-kafka-config.md  soak-restart-evidence.md  stable-operations-evidence.md  support-policy.md  upgrade-rollback-guide.md  wave-2-gate-cadence.md
docs/plans/: 2026-02-14-benchmark-validation-reset-design.md  2026-02-14-benchmark-validation-reset-plan.md  2026-02-14-process-benchmark-design.md  2026-02-14-process-benchmark-implementation.md  2026-02-16-retry-dlq-design.md  (+5 more)
examples/: README.md  async_simple.py  process_cpu.py
monitoring/: prometheus.yml
pyrallel_consumer/: __init__.py  config.py  consumer.py  dto.py  logger.py  metrics_exporter.py  offset_manager.py  resource_signals.py  worker.py
scripts/: compatibility_matrix.py  release_policy.py  role_b_preflight.py
(+154 files in other folders)
