[dependency-groups]
dev = [
  "bandit>=1.9.3",
  "pre-commit>=4.5.1",
  "pylint>=4.0.4"
]

[project]
dependencies = [
  "cachetools>=7.0.0",
  "confluent-kafka>=2.13.0",
  "pydantic-settings>=2.12.0",
  "sortedcontainers>=2.4.0",
  "tenacity>=9.1.3",
]
description = "Add your description here"
name = "pyrallel-consumer"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
