[dependency-groups]
dev = [
  "bandit>=1.9.3",
  "pre-commit>=4.5.1",
  "pylint>=4.0.4",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "snakeviz>=2.2.2",
  "yappi>=1.7.3"
]

[project]
dependencies = [
  "cachetools>=7.0.0",
  "confluent-kafka>=2.13.0",
  "orjson>=3.11.7",
  "pydantic-settings>=2.12.0",
  "sortedcontainers>=2.4.0",
  "tenacity>=9.1.3"
]
description = "Add your description here"
name = "pyrallel-consumer"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
