[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=69", "wheel"]

[dependency-groups]
dev = [
  "bandit>=1.9.3",
  "pre-commit>=4.5.1",
  "py-spy>=0.4.1",
  "pylint>=4.0.4",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "snakeviz>=2.2.2",
  "twine>=6.2.0",
  "yappi>=1.7.3"
]

[project]
authors = [{name = "Pyrallel Consumer Authors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Distributed Computing"
]
dependencies = [
  "cachetools>=7.0.0",
  "confluent-kafka>=2.13.0",
  "orjson>=3.11.7",
  "msgpack>=1.0.8",
  "prometheus-client>=0.24.1",
  "pydantic-settings>=2.12.0",
  "sortedcontainers>=2.4.0",
  "tenacity>=9.1.3"
]
description = "High-throughput Kafka parallel consumer for asyncio + multiprocessing"
keywords = ["kafka", "consumer", "asyncio", "parallel", "pydantic"]
license = "Apache-2.0"
license-files = ["LICENSE"]
name = "pyrallel-consumer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["pyrallel_consumer*"]
